# iface

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  vcpkg.json
iface/: CMakeLists.txt  iface.h
iface/include/: iface.h
test/: CMakeLists.txt  basic.cpp  basic_should_pass.cpp  logic.cpp  standalone.cpp  test_utils.h
